--- a/references.bib
+++ b/references.bib
@@ -15,7 +15,7 @@
 	pages = {1--6},
 	volume = {21},
 	number = {212},
-	doi = {http://jmlr.org/papers/v21/20-729.html}
+	url = {http://jmlr.org/papers/v21/20-729.html}
 }
 
 @book{kalbfleisch1980,
@@ -38,4 +38,12 @@
 	year = {2022},
 	date = {2022},
 	url = {https://www.johannesbgruber.eu/post/2022-03-29-scikit-learn-models-in-r-with-reticulate/}
+}
+
+@article{robbins2023,
+	title = {How to create a web site using Quarto, RStudio, and GitHub Pages},
+	author = {Robbins, Joyce},
+	year = {2023},
+	date = {2023},
+	url = {https://www.youtube.com/watch?v=YN75YXaLFGM}
 }
