--- a/projects.qmd
+++ b/projects.qmd
@@ -10,12 +10,8 @@ Survival Analysis is an important branch in statistics, it analyze the expected 
 
 ### ECTR
 
-Extracorporeal treatment (ECTR): A therapeutic intervention performed externally to the body, which promotes poison removal by mechanisms different from endogenous pathways. ECTR includes hemodialysis (HD), continuous renal replacement therapy (CRRT), extended dialysis, peritoneal dialysis (although technically occurring in the body), hemofiltration (HF), hemodiafiltration (HDF), hemoperfusion (HP), therapeutic plasma exchange (PE) and albumin/ “liver” dialysis. Clinically, the doctors will treat the patients based on the experience. In this project, we will analyze this question statistically, for checking the efficiency and significance for the treatments in subgroups.
+Extracorporeal treatment (ECTR): A therapeutic intervention performed externally to the body, which promotes poison removal by mechanisms different from endogenous pathways. ECTR includes hemodialysis (HD), continuous renal replacement therapy (CRRT), extended dialysis, peritoneal dialysis (although technically occurring in the body), hemofiltration (HF), hemodiafiltration (HDF), hemoperfusion (HP), therapeutic plasma exchange (PE) and albumin/ "liver" dialysis. Clinically, the doctors will treat the patients based on the experience. In this project, we will analyze this question statistically, for checking the efficiency and significance for the treatments in subgroups.
 
 ### Methodology
 
-The survival analysis of poisoning cases involving specific toxins requires the application of appropriate statistical models to capture the complexity and heterogeneity of the data. The Cox Proportional Hazards Model is a widely used approach in survival analysis, and in this study, we will employ it as the primary tool for investigating the factors that influence survival outcomes.
-The Cox model assumes that the hazard function, which represents the instantaneous risk of an event (in this case, death or recovery), is proportional across individuals over time. This assumption allows us to estimate the effect of predictors on the hazard function without assuming a specific distribution for survival times.
-To account for potential heterogeneity in the data, we will consider several extensions of the Cox model. One such extension is the Cure Model, which accounts for the possibility of long-term survivors who are effectively cured of the toxicity effects. This model separates the population into two groups: those who are cured and those who are not, and models the survival distribution for each group separately.
-Another extension is the Frailty Model, which incorporates individual-level frailty factors to capture heterogeneity in survival outcomes. Frailty factors represent latent characteristics that affect the hazard function of each individual, and their inclusion in the model allows for more accurate estimation of survival probabilities.
-Additionally, we will consider the Accelerated Failure Time (AFT) model, which assumes that the survival time of an individual is multiplied by an exponential function of the predictors. This model provides a direct interpretation of the predictors in terms of their effect on survival time.
+The survival analysis of poisoning cases involving specific toxins requires the application of appropriate statistical models to capture the complexity and heterogeneity of the data. The Cox Proportional Hazards Model is a widely used approach in survival analysis, and in this study, we will employ it as the primary tool for investigating the factors that influence survival outcomes. The Cox model assumes that the hazard function, which represents the instantaneous risk of an event (in this case, death or recovery), is proportional across individuals over time. This assumption allows us to estimate the effect of predictors on the hazard function without assuming a specific distribution for survival times. To account for potential heterogeneity in the data, we will consider several extensions of the Cox model. One such extension is the Cure Model, which accounts for the possibility of long-term survivors who are effectively cured of the toxicity effects. This model separates the population into two groups: those who are cured and those who are not, and models the survival distribution for each group separately. Another extension is the Frailty Model, which incorporates individual-level frailty factors to capture heterogeneity in survival outcomes. Frailty factors represent latent characteristics that affect the hazard function of each individual, and their inclusion in the model allows for more accurate estimation of survival probabilities. Additionally, we will consider the Accelerated Failure Time (AFT) model, which assumes that the survival time of an individual is multiplied by an exponential function of the predictors. This model provides a direct interpretation of the predictors in terms of their effect on survival time.
