--- a/references.bib
+++ b/references.bib
@@ -51,6 +51,6 @@
 @article{xie,
 	title = {Quarto和R Markdown的区别？},
 	author = {Xie, yihui},
-	journal = {2022},
+	Date = {2022},
 	url = {https://d.cosx.org/d/422901-quartor-markdown/10}
 }
